--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
-fastapi
-uvicorn
-pydantic
-python-dotenv
-passlib[bcrypt]
-PyJWT
-requests
-langchain
-langchain-groq
-pypdf
-gunicorn
+httpx
+idna
+jsonpatch
+jsonpointer
+langchain-core
+langchain-text-splitters
+langsmith
+motor
+multidict
+numpy
+orjson
+packaging
+propcache
+pydantic-core
+pymongo
+python-multipart
+PyYAML
+requests-toolbelt
+sniffio
+sqlalchemy
+starlette
+tenacity
+typing-extensions
+urllib3
+watchfiles
+websockets
+yarl
