Fix requirements and CORS for deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ fastapi
 uvicorn
 python-dotenv
 pydantic
+pydantic[email]
+email-validator
 requests
 langchain
+langchain-core
 langchain-community
 langchain-groq
 pypdf
